--- a/16/package.json
+++ b/16/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/node": "^18.11.17",
+    "async": "^3.2.4",
     "fs": "^0.0.1-security",
     "typescript": "^4.9.4"
   }
